--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
       run: pip install cython
 
     - name: Install pytoshop
-      run: pip install --target ./pytoshop_package pytoshop==1.1.0
+      run: pip install --target ./pytoshop_package pytoshop==1.1.0 -I --no-cache-dir
 
     - name: Create ZIP file
       run: tar -zcvf pytoshop_windows.zip pytoshop_package
