pip pytoshop twice

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,9 @@ jobs:
     - name: Install pytoshop
       run: pip install --target ./pytoshop_package pytoshop==1.1.0 -I --no-cache-dir
 
+    - name: Install pytoshop twice
+      run: pip install --target ./pytoshop_package pytoshop==1.1.0 -I --no-cache-dir
+
     - name: Create ZIP file
       run: tar -zcvf pytoshop_windows.zip pytoshop_package
 
