--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,9 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Install Cython
+      run: pip install cython
+
     - name: Install pytoshop
       run: pip install --target ./pytoshop_package pytoshop==1.1.0 -I --no-cache-dir
 
